add chemistry